overflow fix for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ html {
 }
 
 body {
+  overflow-x: hidden;
+}
+
+body {
   font-family: var(--font-spartan);
   background-color: var(--col-dark-blue);
 }
@@ -269,5 +273,6 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   margin-bottom: 40px;
+  overflow-x: hidden;
 }
 /*# sourceMappingURL=style.css.map */
