--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -11,4 +11,6 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   margin-bottom: 40px;
+
+  overflow-x: hidden;
 }
